fix(savings): adjusted simulation screen content position on mobile

--- a/src/app/savings/pages/plan-simulation-screen/plan-simulation-screen.component.scss
+++ b/src/app/savings/pages/plan-simulation-screen/plan-simulation-screen.component.scss
@@ -7,6 +7,10 @@
   align-items: center;
   justify-content: center;
 
+  @media (max-width: 600px) {
+    justify-content: unset;
+  }
+
   &__title {
     @include typography;
     font-size: $medium-font-size;
